The beginning of a complete remake. Currently contains no actual code, just the GUI.

--- a/SLWModLoader/src/AboutFrm.resx
+++ b/SLWModLoader/src/AboutFrm.resx
@@ -117,13 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="label2.Text" xml:space="preserve">
-    <value>A program designed to help people easily load their Sonic Lost World mods.
+  <data name="aboutLbl.Text" xml:space="preserve">
+    <value>A program designed to help people easily load Sonic Lost World mods.
 Requires a LEGALLY-PURCHASED version of the game.
 
 CREDITS:
-Radfordhound - Core Mod Loader functionallity.
-Korama - CPKREDIR
+Radfordhound - Developing the mod loader.
+Korama - Developing "CPKREDIR."
 </value>
   </data>
 </root>
