reposition some things, add github link on about, remove god-horrid 24 icon

--- a/SLWModLoader/src/AboutForm.resx
+++ b/SLWModLoader/src/AboutForm.resx
@@ -124,6 +124,7 @@ Requires a LEGALLY-PURCHASED version of the game.
 CREDITS:
 Radfordhound - Developing the mod loader.
 Korama - Developing "CPKREDIR."
-</value>
+Skyth - Helping out
+Slash - Helping out</value>
   </data>
 </root>
