--- a/SLWModLoader/Properties/Resources.resx
+++ b/SLWModLoader/Properties/Resources.resx
@@ -117,6 +117,18 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ApplicationTitle" xml:space="preserve">
+    <value>SLW Mod Loader</value>
+  </data>
+  <data name="CannotFindExecutableText" xml:space="preserve">
+    <value>SLW Mod Loader could not find your Sonic Lost World executable (slw.exe). The mod loader must be installed within your Sonic Lost World installation directory in order to work correctly. Please ensure you've installed the program in the correct place, and try again.</value>
+  </data>
+  <data name="CannotFindModsDirectoryText" xml:space="preserve">
+    <value>A "mods" folder must exist within your Sonic Lost World installation directory for the mod loader to correctly function. Would you like to create one?</value>
+  </data>
+  <data name="ExceptionText" xml:space="preserve">
+    <value>An error occured! See "SLWModLoader.log" for more info and report the file if possible.</value>
+  </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="icon96" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\res\icon96.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
