--- a/SLWModLoader/Properties/Resources.resx
+++ b/SLWModLoader/Properties/Resources.resx
@@ -133,4 +133,7 @@
   <data name="icon96" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\res\icon96.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="PiracyText" xml:space="preserve">
+    <value>We have detected that you're using a pirated copy of {0}. Please purchase {0} off the Steam store.</value>
+  </data>
 </root>
