--- a/SLWModLoader/Properties/Resources.resx
+++ b/SLWModLoader/Properties/Resources.resx
@@ -137,6 +137,6 @@
     <value>We have detected that you're using a pirated copy of {0}. Please purchase {0} off the Steam store.</value>
   </data>
   <data name="update" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\src\update.bat;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>..\res\update.bat;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
