--- a/SLWModLoader/Properties/Resources.resx
+++ b/SLWModLoader/Properties/Resources.resx
@@ -121,7 +121,9 @@
     <value>SLW Mod Loader</value>
   </data>
   <data name="CannotFindExecutableText" xml:space="preserve">
-    <value>SLW Mod Loader could not find the game executable. The mod loader must be installed within your Sonic Lost World installation directory, or your Sonic Generations installation directory, in order to work correctly. Please ensure you've installed the program in the correct place, and try again.</value>
+    <value>SLW Mod Loader could not find a game executable in its startup directory. 
+The mod loader can attempt to look for your game and install itself automatically.
+</value>
   </data>
   <data name="CannotFindModsDirectoryText" xml:space="preserve">
     <value>A "mods" folder must exist within your game installation directory for the mod loader to correctly function. Would you like to create one?</value>
@@ -150,5 +152,9 @@
   </data>
   <data name="Enable_FxPipeline" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\res\patches\sonicgenerations\Enable FxPipeline.bin;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="ExecutableNotPatchedText" xml:space="preserve">
+    <value>{0} executable has not yet been patched for use with CPKREDIR, which is required to load mods.
+Would you like to patch the executable now?</value>
   </data>
 </root>
