--- a/HedgeModManager/src/AboutForm.resx
+++ b/HedgeModManager/src/AboutForm.resx
@@ -122,8 +122,8 @@
 Requires a LEGALLY-PURCHASED version of the game.
 
 CREDITS:
-Radfordhound - Developing the Mod Loader.
-SuperSonic16 - Continuing the Development.
+Radfordhound - Developing the mod loader.
+SuperSonic16 - Continuing development.
 Korama - Developing "CPKREDIR."
 Skyth - Helping out
 Slash - Helping out</value>
