--- a/HedgeModManager/Properties/Resources.resx
+++ b/HedgeModManager/Properties/Resources.resx
@@ -179,4 +179,7 @@ This Mod does have a website.
   <data name="icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\res\icon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="SonicGenerationsCodeLoader" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\res\codes\sonicgenerationscodeloader.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
