Update about form

--- a/HedgeModManager/src/AboutForm.resx
+++ b/HedgeModManager/src/AboutForm.resx
@@ -122,9 +122,10 @@
 Requires a legally owned version of one of the supported games.
 
 CREDITS:
-Radfordhound - Developing the mod loader.
-SuperSonic16 - Continuing development.
-Korama - Developing "CPKREDIR."
+Radfordhound - Developing the mod loader
+SuperSonic16 - Continuing development
+Korama - CPKREDIR
+MainMemory - mod-loader-common
 Skyth - Helping out
 Slash - Helping out</value>
   </data>
