--- a/HedgeModManager/Properties/Resources.resx
+++ b/HedgeModManager/Properties/Resources.resx
@@ -182,4 +182,7 @@ This Mod does have a website.
   <data name="SonicGenerationsCodeLoader" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\res\codes\sonicgenerationscodeloader.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="ForcesCodeLoader" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\res\codes\forcescodeloader.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
