--- a/HedgeModManager/src/AboutForm.resx
+++ b/HedgeModManager/src/AboutForm.resx
@@ -124,9 +124,11 @@ Requires a legally owned version of one of the supported games.
 CREDITS:
 Radfordhound - Developing the mod loader
 SuperSonic16 - Continuing development
+Skyth - For SonicAudioLib and for Helping out
 Korama - CPKREDIR
-MainMemory - mod-loader-common
 Skyth - Helping out
-Slash - Helping out</value>
+Slash - Helping out
+MainMemory - mod-loader-common
+</value>
   </data>
 </root>
