--- a/HedgeModManager/src/AboutForm.resx
+++ b/HedgeModManager/src/AboutForm.resx
@@ -124,7 +124,7 @@ Requires a legally owned version of one of the supported games.
 CREDITS:
 Radfordhound - Developing the mod loader
 SuperSonic16 - Continuing development
-Skyth - For SonicAudioLib and for Helping out
+Skyth - Helping out
 Korama - CPKREDIR
 Slash - Helping out
 MainMemory - mod-loader-common
