More changes mainly for Forces
Updated ForcesCodeLoader to v1.3
Included the include files that i keep forgetting to upload
Fixed crash on startup with no mods enabled
HedgeModManager will now show a message on startup if you don't have
ForcesCodeLoasder installed (If the detected game is Sonic Forces)
You can now install ForcesCodeloader using the Setting tab
Updated Version

--- a/HedgeModManager/Properties/Resources.resx
+++ b/HedgeModManager/Properties/Resources.resx
@@ -191,4 +191,7 @@ This Mod does have a website.
   <data name="NoCodesText" xml:space="preserve">
     <value>No Codes were found. Would you like Hedge Mod Manager to Download Codes from Its database?</value>
   </data>
+  <data name="CodeLoaderNotInstalled" xml:space="preserve">
+    <value>The Codeloader for {0} corrently isn't installed, You you like to install it now?</value>
+  </data>
 </root>
