--- a/HedgeModManager/Properties/Resources.resx
+++ b/HedgeModManager/Properties/Resources.resx
@@ -118,11 +118,11 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ApplicationTitle" xml:space="preserve">
-    <value>Hedge Mod Manager</value>
+    <value>HedgeModManager</value>
   </data>
   <data name="CannotFindExecutableText" xml:space="preserve">
-    <value>Hedge Mod Manager could not find a game executable in its startup directory. 
-The HedgeModManager can attempt to look for your game and install itself automatically.
+    <value>HedgeModManager could not find a game executable in its startup directory. 
+HedgeModManager can attempt to look for your game and install itself automatically.
 </value>
   </data>
   <data name="CannotFindModsDirectoryText" xml:space="preserve">
@@ -167,12 +167,12 @@ Do you want HedgeModManager to attempt to fix this?</value>
 Do you want to update from version {1} to {2}? ({3})</value>
   </data>
   <data name="NoUpdateServerAndURLText" xml:space="preserve">
-    <value>Hedge Mod Manager can not check for updates for {0} because it no update server.</value>
+    <value>HedgeModManager can not check for updates for {0} because it no update server.</value>
   </data>
   <data name="NoUpdateServerText" xml:space="preserve">
-    <value>Hedge Mod Manager can not check for updates for {0} because no update server.
+    <value>HedgeModManager can not check for updates for {0} because no update server.
 
-This Mod does have a website.
+This mod does have a website.
     Do you want to open it and check for updates manually?
         URL: {1}</value>
   </data>
@@ -189,9 +189,9 @@ This Mod does have a website.
     <value>..\res\cpkredir\cpkredir.ini;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
   <data name="NoCodesText" xml:space="preserve">
-    <value>No Codes were found. Would you like Hedge Mod Manager to Download Codes from Its database?</value>
+    <value>No codes were found. Would you like HedgeModManager to download codes from it's database?</value>
   </data>
   <data name="CodeLoaderNotInstalled" xml:space="preserve">
-    <value>The Codeloader for {0} corrently isn't installed, You you like to install it now?</value>
+    <value>The code loader for {0} currently isn't installed, would you like to install it now?</value>
   </data>
 </root>
