Fix one more grammar error

--- a/HedgeModManager/src/AboutForm.resx
+++ b/HedgeModManager/src/AboutForm.resx
@@ -124,9 +124,9 @@ Requires a legally owned version of one of the supported games.
 CREDITS:
 Radfordhound - Developing the mod loader
 SuperSonic16 - Continuing development
-Skyth - For SonicAudioLib and with Helping out with the project
+Skyth - For SonicAudioLib and with helping out with the project
+Slash - Helping out with the project
 Korama - CPKREDIR
-Slash - Helping out
 MainMemory - mod-loader-common
 
 </value>
