Stuff i forgot to commit and Updated CodeLoader
Updated to ForcesCodeLoader v3.2
Added credit to Sajid for Winrar Support
And other stuff i forgot to commit

--- a/HedgeModManager/src/AboutForm.resx
+++ b/HedgeModManager/src/AboutForm.resx
@@ -128,7 +128,7 @@ Skyth - For SonicAudioLib and with helping out with the project
 Slash - Helping out with the project
 Korama - CPKREDIR
 MainMemory - mod-loader-common
-
+Sajid - For Winrar Support
 </value>
   </data>
 </root>
