--- a/HedgeModManager/Properties/Resources.resx
+++ b/HedgeModManager/Properties/Resources.resx
@@ -209,4 +209,8 @@ However, this mod does have a website.
   <data name="SonicGenerationsCodeLoaderHashURL" xml:space="preserve">
     <value>https://github.com/thesupersonic16/HedgeModManager/raw/master/HedgeModManager/res/codes/SonicGenerationsCodeLoader.dll.sha256</value>
   </data>
+  <data name="GameBananaRegUpdateText" xml:space="preserve">
+    <value>We have updated the command for GameBanana's 1-Click Install.
+To complete the update we will need to restart HedgeModManager as Admin.</value>
+  </data>
 </root>
