Added basic Piracy Checks, dw you can still play with mods
This locks out Support and Backing up, As if you are able to crack, You
are expected to know how to backup and know you wont be getting support.

This will still allow you to play Forces with mods you like.

--- a/HedgeModManager/Properties/Resources.resx
+++ b/HedgeModManager/Properties/Resources.resx
@@ -213,4 +213,7 @@ However, this mod does have a website.
     <value>We have updated the command for GameBanana's 1-Click Install.
 To complete the update we will need to restart HedgeModManager as Admin.</value>
   </data>
+  <data name="ExceptionPiracyText" xml:space="preserve">
+    <value>An error occured! See "HedgeModManager.log" for more info.</value>
+  </data>
 </root>
