Fixed Update script, Credits and ReadMe

--- a/HedgeModManager/src/AboutForm.resx
+++ b/HedgeModManager/src/AboutForm.resx
@@ -124,7 +124,7 @@ Requires a legally owned version of one of the supported games.
 CREDITS:
 Radfordhound - Developing the mod loader
 SuperSonic16 - Continuing development
-Skyth - For SonicAudioLib and with helping out with the project
+Skyth - Helping out with the projects
 Slash - Helping out with the project
 Korama - CPKREDIR
 MainMemory - mod-loader-common
