--- a/HedgeModManager/Properties/Resources.resx
+++ b/HedgeModManager/Properties/Resources.resx
@@ -213,6 +213,10 @@ However, this mod does have a website.
     <value>We have updated the command for GameBanana's 1-Click Install.
 To complete the update we will need to restart HedgeModManager as Admin.</value>
   </data>
+  <data name="GameBananaRegInstallText" xml:space="preserve">
+    <value>We have detected the command for GameBanana's 1-Click Install is missing.
+To complete the install we will need to restart HedgeModManager as Admin.</value>
+  </data>
   <data name="ExceptionPiracyText" xml:space="preserve">
     <value>An error occured! See "HedgeModManager.log" for more info.</value>
   </data>
