--- a/HedgeModManager/Properties/Resources.resx
+++ b/HedgeModManager/Properties/Resources.resx
@@ -224,4 +224,7 @@ To complete the install we will need to restart HedgeModManager as Admin.</value
     <value>Your current license to use HedgeModManager has expired
 Please renew your license to continue using all the features HedgeModManager Pro offers.</value>
   </data>
+  <data name="GBStyleSheet" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\res\gbstylesheet.css;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
 </root>
