--- a/HedgeModManager/Properties/Resources.resx
+++ b/HedgeModManager/Properties/Resources.resx
@@ -227,4 +227,10 @@ Please renew your license to continue using all the features HedgeModManager Pro
   <data name="LoaderListURL" xml:space="preserve">
     <value>https://github.com/thesupersonic16/HedgeModManager/raw/master/HedgeModManager/res/Loaders.ini</value>
   </data>
+  <data name="Disable_Kick" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\res\patches\sonicgenerations\Disable Kick.bin;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="Enable_Kick" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\res\patches\sonicgenerations\Enable Kick.bin;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
