--- a/HedgeModManager/Properties/Resources.resx
+++ b/HedgeModManager/Properties/Resources.resx
@@ -136,6 +136,12 @@
   <data name="IMG_HEDGEMODMANAGER" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Graphics\icon256.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="STR_MSG_NOGAME" xml:space="preserve">
+    <value>HedgeModManager could not detect any supported games
+in the current directory!
+
+Do you want run the HMM Auto Installer?</value>
+  </data>
   <data name="STR_UI_DELETEMOD" xml:space="preserve">
     <value>Are you sure you want to delete "{0}"?
 This Action cannot be undone!</value>
