Add support for updating through github

--- a/HedgeModManager/Properties/Resources.resx
+++ b/HedgeModManager/Properties/Resources.resx
@@ -136,6 +136,9 @@
   <data name="GBStyleSheet" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\GBStyleSheet.css;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="HMM_UPDATE_TEXT" xml:space="preserve">
+    <value>New Update is available!</value>
+  </data>
   <data name="ICO_HedgeModManager" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Graphics\icon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
