--- a/HedgeModManager/Properties/Resources.resx
+++ b/HedgeModManager/Properties/Resources.resx
@@ -148,6 +148,9 @@
   <data name="IMG_HEDGEMODMANAGER" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Graphics\icon256.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="LNG_ZHO" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\language\zho.lang;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
   <data name="STR_CANCEL_WARNING" xml:space="preserve">
     <value>Are you sure you want to cancel updating?
 This may corrupt {0}</value>
